--- a/plugins/gutenberg/src/blocks/product-catalog/style.scss
+++ b/plugins/gutenberg/src/blocks/product-catalog/style.scss
@@ -400,10 +400,12 @@
 
 	.wbcom-catalog__filters {
 		width: 100%;
+		flex-direction: column;
+		align-items: stretch;
 	}
 
 	.wbcom-catalog__select {
-		flex: 1;
+		width: 100%;
 		min-width: 0;
 	}
 }
